<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/rel_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab5_relative_title"
        android:textSize="18sp" />

    <Button
        android:id="@+id/rel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab5_rel_click"
        android:layout_below="@id/rel_title"
        android:layout_marginTop="12dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/rel_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab5_rel_info"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/rel_button" />

</RelativeLayout>
