<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <TextView
        android:id="@+id/cons_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab5_constraint_title"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cons_btn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lab5_btn1"
        app:layout_constraintTop_toBottomOf="@id/cons_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cons_btn2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/cons_btn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lab5_btn2"
        app:layout_constraintTop_toBottomOf="@id/cons_title"
        app:layout_constraintStart_toEndOf="@id/cons_btn1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45" />

    <View
        android:id="@+id/cons_anchor"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:background="#FF5722"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/cons_btn1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cons_movable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lab5_movable_label"
        app:layout_constraintTop_toBottomOf="@id/cons_anchor"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
