<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_background"
        android:text="@string/surname"
        style="@style/SurnameStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/imageFlag"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:contentDescription="@string/flag_desc"
        android:src="@drawable/flag_ua"
        app:layout_constraintTop_toBottomOf="@id/textViewSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/imageCoat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/coat_ua"
        android:contentDescription="@string/coat_desc"
        app:layout_constraintTop_toBottomOf="@id/imageFlag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>